Fix detail image size on small screens

--- a/src/assets/app.css
+++ b/src/assets/app.css
@@ -178,6 +178,11 @@ md-bottom-sheet .details-image-container {
     max-width: 50%;
   }
 }
+@media (max-width: 600px) {
+  md-bottom-sheet .details-image-container {
+    max-width: 100%;
+  }
+}
 md-bottom-sheet .details-image-container img {
   border: 0.3em solid #e0e0e0;
   max-width: 100%;
