--- a/src/less/details.less
+++ b/src/less/details.less
@@ -38,6 +38,10 @@ md-bottom-sheet {
       max-width: 50%;
     }
 
+    @media (max-width: 600px) {
+      max-width: 100%;
+    }
+
     img {
       border: @image-border;
       max-width: 100%;
